add expcetion resolver and logic about stock
